Improved Java 11 compilation , and reduce deprecated methods